methods.flowerpot.FlowerPot.scala.error
Compilation error:
FlowerPot:8: error: not enough arguments for method setPos: (x$1: Int, x$2: Int)Unit.
Unspecified value parameter x$2.
      setPos(listPos[compteur])
            ^